[gd_scene load_steps=8 format=2]

[ext_resource path="res://Levels/House Level Prototype.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player Scenes/Player FPS Controler.tscn" type="PackedScene" id=2]
[ext_resource path="res://Toddler Scenes/Jumping Suisidal Toddler.tscn" type="PackedScene" id=3]
[ext_resource path="res://Toddler Scenes/New Toddler Prototype.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player Scenes/Items/Restock Basic.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player Scenes/Items/Food Launcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player Scenes/UI.gd" type="Script" id=7]

[node name="Main" type="Node"]

[node name="Test Toddler" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.791362, 0, 0.611347, 0, 1, 0, -0.611347, 0, 0.791362, -0.199974, 3.38638, 4.86536 )

[node name="House Level Prototype" parent="." instance=ExtResource( 1 )]

[node name="Restock Basic" parent="House Level Prototype" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.11266, -6.49176 )

[node name="Player FPS Controler" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.999943, 0, -0.0106985, 0, 1, 0, 0.0106985, 0, -0.999943, 0, 4.4964, 0 )
jump = 6
speed = 5

[node name="Food Launcher" parent="Player FPS Controler" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.0174523, 0.999848, 0, -0.999848, 0.0174523, 0.107806, 0.342, -0.7231 )

[node name="Broken" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.791362, 0, 0.611347, 0, 1, 0, -0.611347, 0, 0.791362, -1.44976, 9.548, 4.86536 )

[node name="UI" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -177.0
margin_bottom = 85.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/CenterContainer"]
margin_left = 43.0
margin_top = 26.0
margin_right = 134.0
margin_bottom = 58.0
custom_constants/hseparation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Food Counter" type="Label" parent="UI/CenterContainer/GridContainer"]
margin_right = 91.0
margin_bottom = 14.0
text = "Food"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Toddler Status" type="Label" parent="UI/CenterContainer/GridContainer"]
margin_top = 18.0
margin_right = 91.0
margin_bottom = 32.0
text = "Toddler Status"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="Full" from="Test Toddler" to="UI" method="_on_Test_Toddler_Full"]
[connection signal="Starving" from="Test Toddler" to="UI" method="_on_Test_Toddler_Starving"]
[connection signal="died" from="Test Toddler" to="UI" method="_on_Test_Toddler_died"]
[connection signal="Food_added" from="House Level Prototype/Restock Basic" to="Test Toddler" method="_on_Player_FPS_Controler_update_food_UI"]
